--- a/src/Styles/Subheader.css
+++ b/src/Styles/Subheader.css
@@ -5,21 +5,21 @@
   display: flex;
   flex-direction: column;
   justify-content: right;
-  
 }
 
 .subheader-container > h2 {
   color: black;
   font-size: 40px;
   font-style: italic;
-  margin-left: 50rem;
-  margin-top: 2px;
+  margin-left: 58rem;
+  margin-top: 5rem;
 }
 
 .subheader-container > p {
   color: black;
   margin-top: 3rem;
-  margin-left: 50rem;
+  margin-left: 58rem;
+  margin-right: 3rem;
   font-size: 20px;
 }
 
