--- a/src/Styles/Subheader.css
+++ b/src/Styles/Subheader.css
@@ -88,6 +88,7 @@
   .btn-mobile {
     display: block;
     text-decoration: none;
+    width: 100px;
   }
 
   .btn {
@@ -95,6 +96,6 @@
   }
   .hero-btns {
     margin-top: 0.1px;
-    width: 20%;
+    width: 130%;
   }
 }
