--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
   font-size: 100px;
 }
 
-.products {
+.contact {
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
@@ -32,11 +32,10 @@
   font-size: 100px;
 }
 
-.sign-up {
+.sgallery {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
   font-size: 100px;
 }
-
