--- a/src/Styles/Button.css
+++ b/src/Styles/Button.css
@@ -19,13 +19,13 @@ root {
     background-color: #8C8587;
     color: #FFC7C2;
     padding: 8px 20px;
-    border: 1 px solid var(--primary);
+    border: 1px solid var(--primary);
     transition: all 0.3s ease-out;
 }
 
 .btn--medium {
     padding: 8px 20px;
-    font-size: 20px
+    font-size: 22px
 }
 
 .btn--large {
@@ -53,4 +53,24 @@ root {
         cursor: pointer;
     }
 
+}
+
+@media screen and (max-width: 1024px) {
+    .btn--large {
+        padding: 6px 10px;
+        font-size: 14px;
+    }
+
+    .btn {
+        padding: 8px 20px;
+        border-radius: 2px;
+        outline: none;
+        border: none;
+        cursor: pointer;
+    }
+
+    .btn--large {
+        padding: 12px 26px;
+        font-size: 10px;
+    }
 }
