--- a/src/Styles/Cards.css
+++ b/src/Styles/Cards.css
@@ -8,31 +8,26 @@ h1 {
 }
 
 .specific-button-style--outline {
-    background-color: #8c8587;
-    color: #FFC7C2;
-    padding: 8px 20px;
-    border: 1 px solid var(--primary);
-    transition: all 0.3s ease-out;
+  background-color: #8c8587;
+  color: #ffc7c2;
+  padding: 8px 20px;
+  border: 1 px solid var(--primary);
+  transition: all 0.3s ease-out;
 }
 
 .specific-button-style {
-    padding: px 20px;
-    border-radius: 2px;
-    outline: none;
-    border: none;
-    cursor: pointer;
-    background-color: #8c8587;
-    color: #FFC7C2;
-    font-size: 20px;
-    margin-top: 20rem;
-    width: 10%;
+  padding: px 20px;
+  border-radius: 2px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  background-color: #8c8587;
+  color: #ffc7c2;
+  font-size: 20px;
+  margin-top: 20rem;
+  width: 10%;
 }
 
-.specific-button-style:hover {
-    background-color: #FFC7C2;
-    color: black;
-    transition: all 0.3s ease-out;
-}
 .cards__container {
   display: flex;
   flex-flow: column;
@@ -90,10 +85,11 @@ h1 {
   max-width: calc((100%) - 60px);
   font-size: 20px;
   font-weight: 700;
-  color: #FFC7C2;
-  background-color: #8c8587;
+  color: black;
   box-sizing: border-box;
   border-radius: 0.5rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-style: italic;
 }
 
 .cards__item__img {
@@ -113,19 +109,16 @@ h1 {
   border-radius: 50%;
   border: 2px solid #8c8587;
 }
-
-.cards__item__img:hover {
-  transform: scale(1.1);
-}
-
 .cards__item__info {
   padding: 20px 30px 30px;
 }
 
 .cards__item__text {
-  color: black;
+  color: #8c8587;
   font-size: 18px;
   line-height: 24px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: lighter;
 }
 
 .cards.btn-mobile {
@@ -149,4 +142,41 @@ h1 {
   .cards__item {
     margin-bottom: 2rem;
   }
+}
+
+@media only screen and (max-width: 1024px) {
+
+  .cards__item__pic-wrap::after {
+    content: attr(data-category);
+    position: absolute;
+    bottom: 0;
+    margin-left: 10px;
+    margin-top: 10px;
+    padding: 6px 8px;
+    max-width: calc((100%) - 60px);
+    font-size: 1.1rem;
+    font-weight: 700;
+    color: black;
+    box-sizing: border-box;
+    border-radius: 0.5rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-style: italic;
+  }
+
+  .cards__item__text {
+    color: #8c8587;
+    font-size: 20px;
+    line-height: 24px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: lighter;
+  }
+}
+@media only screen and (max-width: 760px) {
+.cards__item__text {
+  color: #8c8587;
+  font-size: 16px;
+  line-height: 18px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: lighter;
+}
 }
