--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -40,3 +40,56 @@
     border: none;
   }
   
+  @media screen and (max-width: 768px) {
+
+.form {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 150%;
+    font-size: 16px;
+  }
+  
+  .form input,
+  .form textarea {
+    width: 100%;
+    padding: 7px;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid rgb(220, 220, 220);
+  }
+  
+  .form input:focus,
+  .form textarea:focus {
+    border: 2px solid rgba(0, 206, 158, 1);
+  }
+  
+  .textarea {
+    max-width: 100%;
+    min-width: 100%;
+    width: 100%;
+    max-height: 100px;
+    min-height: 100px;
+  }
+  
+  .label {
+    margin-top: 1rem;
+  }
+  
+  .input[type="submit"] {
+    margin-top: 2rem;
+    cursor: pointer;
+    background: rgb(249, 105, 14);
+    color: white;
+    border: none;
+  }
+
+  }
+
+  @media screen and (max-width: 1024px) {
+
+
+
+
+
+  }
