--- a/src/Styles/HeroSection.css
+++ b/src/Styles/HeroSection.css
@@ -16,7 +16,7 @@
 
 .hero-container > p {
   color: #8c8587;
-  margin-top: 3rem;
+  margin-top: 5rem;
   margin-left: 3rem;
   font-size: 24px;
  
@@ -63,6 +63,46 @@
   }
 }
 
+
+
+@media screen and (max-width: 1024px) {
+  .hero-container {
+    background: url("../Images/Hero.png") center center/cover no-repeat;
+    height: 40vh;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+  }
+  
+  .hero-container > h2 {
+    color: #8c8587;
+    font-size: 34px;
+    margin-top: 10rem;
+    margin-left: 2rem;
+    font-style: italic;
+  }
+  
+  .hero-container > p {
+    color: #8c8587;
+    margin-top: 5rem;
+    margin-left: 2rem;
+    font-size: 24px;
+   
+  }
+  
+  .hero-btns {
+    margin-top: 2px;
+    width:20%;
+    margin-left: 3rem;
+  }
+  
+  .hero-btns .btn {
+    margin: 6px;
+  }
+ 
+}
+
 @media screen and (max-width: 768px) {
   .hero-container {
     background: url("../Images/Hero.png") center center/cover no-repeat;
@@ -71,15 +111,16 @@
     display: flex;
     flex-direction: column;
     justify-content: left;
-    margin-left: 1rem;
+    margin-left: 0.6rem;
   }
   .hero-container > h2 {
     font-size: 14px;
     margin-top: 60px;
     color: black;
+    margin-left: 0.5rem;
   }
   .hero-container > p {
-    font-size: 10px;
+    font-size: 0.7rem;
     margin-top: 10px;
     color: black;
     margin-left: 0.5rem;
