--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -45,24 +45,85 @@ h2 {
 }
 
 .section4-Home {
+  background: url("../Images/Testimonial.png") center center/cover no-repeat;
+  height: 25vh;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+}
+
+.section5-Home > p {
+  color: #8c8587;
+  margin: 2rem 5rem 2rem;
+  font-size: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  line-height: 45px;
+}
+
+/* Tablet Responsive Layout */
+
+/* Mobile Responsive Layout */
+
+@media screen and (max-width: 1024px) {
+  .Home {
+    background-color: #fbe4ea;
+  }
+
+  h1 {
+    margin-left: 2.5rem;
+    font-size: 30px;
+  }
+  h2 {
+    color: black;
+    font-size: 26px;
+    font-style: italic;
+    align-items: left;
+    margin-left: 3rem;
+  }
+
+  .section2-Home {
+    margin-left: 1rem;
+  }
+
+  .section2-Home > p {
+    color: #8c8587;
+    margin: 1rem 3rem 2rem;
+    font-size: 1.2rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    line-height: 1.5rem;
+  }
+
+  .section3-Home {
+    margin-left: 1rem;
+  }
+
+  .section3-Home > p {
+    color: #8c8587;
+    margin: 1rem 3rem 2rem;
+    font-size: 1.2rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    line-height: 1.5rem;
+  }
+  .section4-Home {
     background: url("../Images/Testimonial.png") center center/cover no-repeat;
-    height: 25vh;
+    height: 10vh;
     max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: left;
   }
-
-.section5-Home > p {
+  .section5-Home > p {
     color: #8c8587;
-    margin: 2rem 5rem 2rem;
-    font-size: 20px;
+    margin: 1rem 3rem 2rem;
+    font-size: 1.2rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    line-height: 45px;
+    line-height: 1.5rem;
   }
-
- 
-/* Tablet Responsive Layout */
+  .section5-Home {
+    margin-left: 1rem;
+  }
+}
 
 @media screen and (max-width: 960px) {
   .Home {
@@ -101,7 +162,6 @@ h2 {
 
   .section3-Home {
     margin-left: 3rem;
-    
   }
 
   .section3-Home > p {
@@ -113,7 +173,6 @@ h2 {
   }
 }
 
-/* Mobile Responsive Layout */
 @media screen and (max-width: 768px) {
   .Home {
     background-color: #fbe4ea;
@@ -121,6 +180,7 @@ h2 {
 
   h1 {
     margin-left: 0.5rem;
+    font-size: 16px;
   }
   h2 {
     color: black;
@@ -137,19 +197,19 @@ h2 {
   .section2-Home > p {
     color: #8c8587;
     margin: 1rem 3rem 2rem;
-    font-size: 12px;
+    font-size: 14px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     line-height: 20px;
   }
 
-.section3-Home {
+  .section3-Home {
     margin-left: 1rem;
   }
 
-.section3-Home > p {
+  .section3-Home > p {
     color: #8c8587;
     margin: 1rem 3rem 2rem;
-    font-size: 12px;
+    font-size: 14px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     line-height: 20px;
   }
@@ -164,12 +224,11 @@ h2 {
   .section5-Home > p {
     color: #8c8587;
     margin: 1rem 3rem 2rem;
-    font-size: 12px;
+    font-size: 14px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     line-height: 20px;
   }
   .section5-Home {
     margin-left: 1rem;
   }
-
 }
