--- a/src/Styles/Testimonial.css
+++ b/src/Styles/Testimonial.css
@@ -1,4 +1,4 @@
-.ServicesCards {
+.testimonials {
     padding: 0.5rem;
     background: #fbe4ea;
   }
@@ -6,7 +6,7 @@
   h1 {
     text-align: left;
   }
-  
+
   .specific-button-style--outline {
       background-color: #8c8587;
       color: #FFC7C2;
@@ -27,13 +27,8 @@
       margin-top: 20rem;
       width: 10%;
   }
-  
-  .specific-button-style:hover {
-      background-color: #FFC7C2;
-      color: black;
-      transition: all 0.3s ease-out;
-  }
-  .ServicesCards__container {
+ 
+  .testimonial__container {
     display: flex;
     flex-flow: column;
     align-items: left;
@@ -42,28 +37,24 @@
     margin: 0 auto;
   }
   
-  .ServicesCards__wrapper {
+  .testimonial__wrapper {
     position: relative;
     margin: 50px 0 45px;
     background-color: #fbe4ea;
   }
   
-  .ServicesCards__items {
+  .testimonial__items {
     margin-bottom: 24px;
   }
   
-  .ServicesCards__item {
+  .testimonial__item {
     display: flex;
-   /* flex: 1rem; */
+    flex: 1;
     margin: 0 1rem;
-    border-radius: 10px;
-    flex-direction: row; /*add on*/
-    align-items: center; /*add on*/
-    margin-bottom: 24px; /*add on*/
+    border-radius: 20px;
   }
-
   
-  .ServicesCards__item__link {
+  .testimonial__item__link {
     display: flex;
     flex-flow: column;
     width: 100%;
@@ -72,12 +63,11 @@
     text-decoration: none;
   }
   
-  .ServicesCards__item__pic-wrap {
-  /*  position: relative; */
-    width: 30%; /*old 100% */
-    padding-top: 30%; /* old 70% */
-   /* overflow: hidden; */
-   position: relative; /* add on */
+  .testimonial__item__pic-wrap {
+    position: relative;
+    width: 100%;
+    padding-top: 70%;
+    overflow: hidden;
   }
   
   .fade-img {
@@ -85,7 +75,7 @@
     animation-duration: 2s;
   }
   
-  .ServciesCards__item__pic-wrap::after {
+  .testimonial__item__pic-wrap::after {
     content: attr(data-category);
     position: absolute;
     bottom: 0;
@@ -95,50 +85,42 @@
     max-width: calc((100%) - 60px);
     font-size: 20px;
     font-weight: 700;
-    color: #FFC7C2;
-    background-color: #8c8587;
+    color: black;
     box-sizing: border-box;
     border-radius: 0.5rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-style: italic;
+    
   }
   
-  .ServicesCards__item__img {
+  .testimonial__item__img {
     position: absolute;
-    top: 0; /* old 0.5rem */
+    top: 0.5rem;
     right: 0;
     bottom: 0;
-    left: 0; /* old 1rem */
+    left: 1rem;
     display: block;
-    width: 100%; /* old 50rem */
-    /*max-width: 100%;*/
-    height: 100%; /* old 70% */
+    width: 50%;
+    max-width: 100%;
+    height: 70%;
     max-height: 100%;
     object-fit: cover;
-    /*transition: all 0.2s linear;*/
+    transition: all 0.2s linear;
     background-color: white;
-    border-radius: 5px; /* old 50% */
+    border-radius: 50%;
     border: 2px solid #8c8587;
   }
-  
-  .ServicesCards__item__img:hover {
-    transform: scale(1.1);
-  }
-  
-  .ServicesCards__item__info {
+  .testimonial__item__info {
     padding: 20px 30px 30px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 70%; /*add on */
-    padding: 10px; /*add on */
-
   }
   
-  .ServicesCards__item__text {
-    color: black;
+  .testimonial__item__text {
+    color: #8c8587;
     font-size: 18px;
     line-height: 24px;
-    margin-top: 10px; /* add on*/
   }
   
-  .ServicesCards.btn-mobile {
+  .testimonial.btn-mobile {
     display: block;
     text-decoration: none;
   }
@@ -150,31 +132,33 @@
   }
   
   @media only screen and (min-width: 1024px) {
-    .ServicesCards__items {
+    .testimonial__items {
       display: flex;
     }
   }
   
   @media only screen and (max-width: 1024px) {
-    .ServicesCards__item {
+    .testimonial__item {
       margin-bottom: 2rem;
     }
   }
-
+  
   @media only screen and (max-width: 1024px) {
-    .ServciesCards__item__pic-wrap::after {
-      content: attr(data-category);
-      position: absolute;
-      bottom: 0;
-      margin-left: 10px;
-      margin-top: 10px;
-      padding: 6px 8px;
-      max-width: calc((100%) - 60px);
-      font-size: 20px;
-      font-weight: 700;
-      color: #FFC7C2;
-      background-color: #8c8587;
-      box-sizing: border-box;
-      border-radius: 0.5rem;
-    }
+  .testimonial__item__pic-wrap::after {
+    content: attr(data-category);
+    position: absolute;
+    bottom: 0;
+    margin-left: 10px;
+    margin-top: 10px;
+    padding: 6px 8px;
+    max-width: calc((100%) - 60px);
+    font-size: 14px;
+    font-weight: 700;
+    color: black;
+    box-sizing: border-box;
+    border-radius: 0.5rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-style: italic;
+    
   }
+}
