--- a/src/Styles/Testimony.css
+++ b/src/Styles/Testimony.css
@@ -85,10 +85,12 @@
     max-width: calc((100%) - 60px);
     font-size: 20px;
     font-weight: 700;
-    color: #FFC7C2;
-    background-color: #8c8587;
+    color: black;
     box-sizing: border-box;
     border-radius: 0.5rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-style: italic;
+    
   }
   
   .cards__item__img {
@@ -113,7 +115,7 @@
   }
   
   .cards__item__text {
-    color: black;
+    color: #8c8587;
     font-size: 18px;
     line-height: 24px;
   }
