--- a/src/Styles/Gallery.css
+++ b/src/Styles/Gallery.css
@@ -1,6 +1,7 @@
 .gallery{
-    background-color: #E1DCDE;
+    background-color: #FBE4EA;
 }
+
 
 .section5-Gallery {
     background: url("../Images/gallery.png") center center/cover no-repeat;
